--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -3,9 +3,17 @@
 {% block title %}Enregistrer un utilisateur{% endblock %}
 
 {% block body %}
-    {% for flash_error in app.flashes('verify_email_error') %}
-        <div class="alert alert-danger" role="alert">{{ flash_error }}</div>
+{#    {% for flash_error in app.flashes('verify_email_error') %}#}
+{#        <div class="alert alert-danger" role="alert">{{ flash_error }}</div>#}
+{#    {% endfor %}#}
+    {% for flashMessage in app.flashes() %}
+        {% for message in flashMessage %}
+            <div class="alert alert-{{ flashMessage.type }}" role="alert">
+                {{ message }}
+            </div>
+        {% endfor %}
     {% endfor %}
+
 
     <h1 class="text-center text-4xl mb-6">Enregistrer un utilisateur</h1>
     <div class="w-1/5 mx-auto">
