--- a/templates/lieu/updatePlace.html.twig
+++ b/templates/lieu/updatePlace.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 {% block title %}Modification d'un lieu{% endblock %}
 {% block body %}
-    <h1 class="text-4xl mb-8 text-center">Modification d'un lieu</h1>
+    <h1 class="text-4xl mb-8 text-center">Modification du lieu</h1>
     {{ form_start(lieuForm) }}
     <div class="w-1/5 mx-auto">
 
