--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -26,7 +26,7 @@
                         {% if is_granted("ROLE_ADMIN") %}
                         <a href="{{ path('app_register') }}" class="mr-5 hover:text-gray-900">Gestion utilisateurs</a>
                         <a href="{{ path('app_manage_lieu') }}" class="mr-5 hover:text-gray-900">Villes</a>
-                        <a class="mr-5 hover:text-gray-900">Sites</a>
+                        <a href="{{ path('app_manage_site') }}" class="mr-5 hover:text-gray-900">Sites</a>
                         {% endif %}
                         {% if is_granted("ROLE_USER") %}
                         <a href="{{ path('app_home') }}" class="mr-5 hover:text-gray-900">Accueil</a>
