--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -3,10 +3,10 @@
 @tailwind utilities;
 
 
-/*.profileForm{*/
-/*    width: 70vw;*/
-/*    margin: 5vh auto;*/
-/*}*/
+.profileForm{
+    width: 70vw;
+    margin: 5vh auto;
+}
 
 /*.detailsProfileImg{*/
 /*    width: 50%;*/
@@ -32,4 +32,14 @@
     border-color: hsl(var(--su) / var(--tw-border-opacity));
     --tw-bg-opacity: 1;
     background-color: hsl(var(--su) / var(--tw-bg-opacity));
+}
+
+.blockImg {
+   height: 150px;
+    width: 300px;
+}
+
+.blockImg img{
+    width: 100%;
+    height: 100%;
 }
