--- a/templates/profile/detailsProfile.html.twig
+++ b/templates/profile/detailsProfile.html.twig
@@ -8,47 +8,49 @@
             <h1 class="text-center text-4xl mb-6">{{ participant.compte.pseudo }}</h1>
         {% endif %}
         <div class="flex my-2 mx-auto md:px-2 pt-20 w-9/12 shadow-2xl rounded-lg">
-                <!-- Section: Design Block -->
-                <section class="mb-32 m-auto">
-                    <div class="flex flex-wrap">
-
-                        <div class="detailsProfileImg">
-                            <img src="https://fakeimg.pl/350x200/?">
-                        </div>
-
-                        <div class="detailsProfileTxt">
-                            <ul class="list-inside mb-6 justify-evenly md:justify-start mx-16 text-xl">
-                                <li class="mb-6 flex items-center">
-                                    <span class="mr-auto">Prénom:</span>
-                                    <span class="ml-auto">{{ participant.prenom }}</span>
-                                </li>
-                                <li class="mb-6 flex items-center">
-                                    <span class="mr-auto">Nom:</span>
-                                    <span class="ml-2">{{ participant.nom }}</span>
-                                </li>
-                                <li class="mb-6 flex items-center">
-                                    <span class="mr-auto">Téléphone :</span>
-                                    <span class="ml-4">{{ participant.telephone }}</span>
-                                </li>
-                                <li class="mb-6 flex items-center">
-                                    <span class="mr-auto">Email:</span>
-                                    <span class="ml-4">{{ participant.compte.email }}</span>
-                                </li>
-                                <li class="mb-6 flex items-center">
-                                    <span class="mr-auto">Site de rattachement :</span>
-                                    <span class="ml-4">{{ participant.site.nom }}</span>
-                                </li>
-                            </ul>
+            <section class="mb-32 m-auto">
+                <div class="flex flex-wrap">
+                    <div class="detailsProfileImg">
+                        {% if participant.urlPhoto %}
+                        <div class="blockImg">
+                            <img src="{{ asset('uploads/' ~ participant.urlPhoto) }}" alt="Photo de profil">
+                            {% else %}
+                                <img src="https://fakeimg.pl/350x200/?" alt="Fake photo">
+                            {% endif %}
                         </div>
                     </div>
-                    <div class="flex justify-center items-center w-1/2">
-                        <a href="{{ path('app_home') }}" class="bg-red-600 hover:bg-red-800 text-white font-bold py-2 px-4 border border-blue-700 rounded mt-10 ml-52">Retour</a>
-                        {% if app.user.id == participant.id or is_granted("ROLE_ADMIN") %}
+                    <div class="detailsProfileTxt">
+                        <ul class="list-inside mb-6 justify-evenly md:justify-start mx-16 text-xl">
+                            <li class="mb-6 flex items-center">
+                                <span class="mr-auto">Prénom:</span>
+                                <span class="ml-auto">{{ participant.prenom }}</span>
+                            </li>
+                            <li class="mb-6 flex items-center">
+                                <span class="mr-auto">Nom:</span>
+                                <span class="ml-2">{{ participant.nom }}</span>
+                            </li>
+                            <li class="mb-6 flex items-center">
+                                <span class="mr-auto">Téléphone :</span>
+                                <span class="ml-4">{{ participant.telephone }}</span>
+                            </li>
+                            <li class="mb-6 flex items-center">
+                                <span class="mr-auto">Email:</span>
+                                <span class="ml-4">{{ participant.compte.email }}</span>
+                            </li>
+                            <li class="mb-6 flex items-center">
+                                <span class="mr-auto">Site de rattachement :</span>
+                                <span class="ml-4">{{ participant.site.nom }}</span>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="flex justify-center items-center w-1/2">
+                    <a href="{{ path('app_home') }}" class="bg-red-600 hover:bg-red-800 text-white font-bold py-2 px-4 border border-blue-700 rounded mt-10 ml-52">Retour</a>
+                    {% if app.user.id == participant.id or is_granted("ROLE_ADMIN") %}
                         <a href="{{ path('manage_profile', {'id':participant.id}) }}" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 border border-blue-700 rounded mt-10 ml-52">Modifier</a>
-                        {% endif %}
-                    </div>
-                </section>
-                <!-- ... -->
+                    {% endif %}
+                </div>
+            </section>
         </div>
     {% endif %}
 {% endblock %}
