--- a/templates/admin/admin.html.twig
+++ b/templates/admin/admin.html.twig
@@ -24,12 +24,18 @@
                         <td>{{ participant.getcompte.email }}</td>
                         <td>{{ participant.getcompte.pseudo }}</td>
                         <td>{{ participant.getcompte.roles[0] }}</td>
-                        <td>{{ participant.actif }}</td>
                         <td>
-                            {% if participant.actif == 1 %}
-                                <button class="btn btn-warning">Désactiver</button></td>
+                            {% if participant.getcompte.isVerified %}
+                                ✔
                             {% else %}
-                                <button class="btn btn-success">Activer</button></td>
+                                ❌
+                            {% endif %}
+                        </td>
+                        <td>
+                            {% if participant.getcompte.isVerified %}
+                                <a href="{{ path('app_disable', {'id': participant.id}) }}" class="btn btn-warning">Désactiver</a></td>
+                            {% else %}
+                                <a href="{{ path('app_disable', {'id': participant.id}) }}" class="btn btn-success">Activer</a></td>
                             {% endif %}
                         <td>
                             <button id="openModal_{{ participant.id }}" type="button" class="btn btn-error">Supprimer</button>
