--- a/templates/profile/manageProfile.html.twig
+++ b/templates/profile/manageProfile.html.twig
@@ -12,7 +12,7 @@
                     <img src="https://fakeimg.pl/350x200/?" alt="Fake photo">
             {% endif %}
         </div>
-        <div class="profileFormTxt">
+        <div class="profileFormTxt w-1/3">
             {{ form_start(profileForm) }}
             <div class="mb-3 flex justify-between">
                 <label for="pseudo">Pseudo :</label>
