--- a/templates/activity/create.html.twig
+++ b/templates/activity/create.html.twig
@@ -7,7 +7,7 @@
     <div class="flex justify-center mt-8">
         <div class="grid grid-cols-2 gap-8">
             <div>
-                {{ form_start(activityForm, {'attr' : {'id' : 'activity_form'}}) }}
+                {{ form_start(activityForm) }}
                 <div class="mt-3 flex flex-col">
                     {{ form_label(activityForm.nom) }}
                     {{ form_widget(activityForm.nom, {'attr': {'class': 'border'}}) }}
@@ -15,12 +15,12 @@
                 </div>
                 <div class="mt-3 flex flex-col">
                     {{ form_label(activityForm.dateDebut) }}
-                    {{ form_widget(activityForm.dateDebut) }}
+                    {{ form_widget(activityForm.dateDebut,{'attr' : {'id' : 'dateDebut'}}) }}
                     {{ form_errors(activityForm.dateDebut) }}
                 </div>
                 <div class="mt-3 flex flex-col">
                     {{ form_label(activityForm.dateCloture) }}
-                    {{ form_widget(activityForm.dateCloture) }}
+                    {{ form_widget(activityForm.dateCloture,{'attr' : {'id' : 'dateCloture'}}) }}
                     {{ form_errors(activityForm.dateCloture) }}
                 </div>
                 <div class="mt-3 flex flex-col">
@@ -82,6 +82,14 @@
                 </div>
             </div>
             </div>
+        <script>
+            document.getElementById("create_activity_dateCloture").addEventListener("change", function() {
+                document.getElementById("create_activity_dateDebut").min = this.value
+            });
+            document.getElementById("create_activity_dateDebut").addEventListener("change", function() {
+                document.getElementById("create_activity_dateCloture").max  = this.value;
+            });
+        </script>
     </div>
     <div class="mt-6 flex justify-center">
         <button type="submit" name="save" class="bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 rounded">
@@ -95,33 +103,4 @@
         </a>
     </div>
     {{ form_end(activityForm) }}
-{% endblock %}
-{% block javascripts %}
-    <script>
-        window.onload = () => {
-            let ville = document.querySelector("#create_activity_ville");
-            ville.addEventListener("change", function (){
-                let form = document.querySelector("#activity_form");
-                let data = this.name + "=" + this.value;
-
-                fetch(form.action,{
-                    method : form.getAttribute("method"),
-                    body : data,
-                    headers : {
-                        "Content-Type" : "application/x-www-form-urlencoded;charset:UTF-8"}
-                })
-                    .then(response => response.text())
-                    .then(html => {
-                        let content  = document.createElement("html");
-                        content.innerHTML = html;
-                        let newSelect = content.querySelector("#create_activity_lieu");
-                        document.querySelector("#create_activity_lieu").replaceWith(newSelect);
-                        console.log(newSelect)
-                    })
-                    .catch(error => {
-                        console.log(error)
-                    })
-            });
-        }
-    </script>
 {% endblock %}
