--- a/templates/activity/details.html.twig
+++ b/templates/activity/details.html.twig
@@ -6,31 +6,31 @@
             <p>Cette sortie n'existe pas</p>
         {% else %}
             <div class="mx-auto">
-                <div class="detailsActivity bg-blue-500 text-primary-content rounded p-5">
+                <div class="detailsActivity text-primary-content rounded-lg shadow-2xl p-5 mx-auto w-2/3">
                     <h1 class="text-4xl mb-8 text-center">Détail de la sortie</h1>
                     <div class="flex justify-center mt-8">
                         <div>
-                            <p class="mt-3">Nom de la sortie : {{ activity.nom }}</p>
-                            <p class="mt-3">Date et heure de la sortie : {{ activity.dateDebut | date('d-m-y h-m') }}</p>
-                            <p class="mt-3">Date limite d'inscription : {{ activity.dateCloture  | date('d-m-y h-m') }}</p>
-                            <p class="mt-3">Durée {{ activity.duree }} minutes</p>
-                            <p class="mt-3">Nombre de places : {{ activity.nbInscriptionsMax }}</p>
-                            <p class="mt-3">Description et infos : {{ activity.descriptionInfos }}</p>
+                            <p class="mt-3"><span class="font-bold">Nom de la sortie :</span> {{ activity.nom }}</p>
+                            <p class="mt-3"><span class="font-bold">Date et heure de la sortie :</span>  {{ activity.dateDebut | date('d-m-y h-m') }}</p>
+                            <p class="mt-3"><span class="font-bold">Date limite d'inscription :</span>  {{ activity.dateCloture  | date('d-m-y h-m') }}</p>
+                            <p class="mt-3"><span class="font-bold">Durée</span> {{ activity.duree / 60 }} minutes</p>
+                            <p class="mt-3"><span class="font-bold">Nombre de places :</span>  {{ activity.nbInscriptionsMax }}</p>
+                            <p class="mt-3"><span class="font-bold">Description et infos :</span>  {{ activity.descriptionInfos }}</p>
                         </div>
                         <div class="ml-8">
-                            <p class="mt-3">Lieu : {{ activity.lieu.nom }}</p>
-                            <p class="mt-3">Rue : {{ activity.lieu.rue }}</p>
-                            <p class="mt-3">Ville : {{ activity.lieu.ville.nom }}</p>
-                            <p class="mt-3">CodePostal : {{ activity.lieu.ville.codePostal }}</p>
-                            <p class="mt-3">Latitude : {{ activity.lieu.latitude }}</p>
-                            <p class="mt-3">Longitude : {{ activity.lieu.longitude }}</p>
+                            <p class="mt-3"><span class="font-bold">Lieu :</span>  {{ activity.lieu.nom }}</p>
+                            <p class="mt-3"><span class="font-bold">Rue :</span>  {{ activity.lieu.rue }}</p>
+                            <p class="mt-3"><span class="font-bold">Ville :</span>  {{ activity.lieu.ville.nom }}</p>
+                            <p class="mt-3"><span class="font-bold">CodePostal :</span>  {{ activity.lieu.ville.codePostal }}</p>
+                            <p class="mt-3"><span class="font-bold">Latitude :</span>  {{ activity.lieu.latitude }}</p>
+                            <p class="mt-3"><span class="font-bold">Longitude :</span>  {{ activity.lieu.longitude }}</p>
                         </div>
                     </div>
                 </div>
             </div>
             </div>
-            <h2 class="text-2xl mt-3">Liste des participants inscrits :</h2>
-                <table class="border border-collapse min-w-max">
+            <h2 class="text-2xl mt-7">Liste des participants inscrits :</h2>
+                <table class="border border-collapse min-w-max mt-3">
                     <thead>
                     <tr>
                         <th class="border p-2">Pseudo</th>
