--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -50,3 +50,14 @@
     width: 100%;
     height: 100%;
 }
+
+
+.logo{
+    width: 70px;
+    height: 70px;
+}
+
+.logo img{
+    width: 100%;
+    height: 100%;
+}
