--- a/templates/lieu/managePlace.html.twig
+++ b/templates/lieu/managePlace.html.twig
@@ -7,7 +7,7 @@
     <div class="flex items-center mt-2">
         <p class="inset-y-0 flex items-center">Le nom contient : </p>
         {{ form_widget(filterCity.nom, {'attr': {'class': 'mb-3 input w-1/3 max-w-xs input-bordered ml-5'}}) }}
-        {{ form_widget(filterCity.search, {'attr': {'class': 'btn mx-3 mb-3'}}) }}
+        {{ form_widget(filterCity.search, {'attr': {'class': 'py-2 px-4 ml-4 btn btn-info hover:bg-blue-300'}}) }}
     </div>
     {{ form_end(filterCity) }}
     <div class="flex flex-col">
@@ -25,15 +25,15 @@
                         <td class="border p-2">{{ ville.nom }}</td>
                         <td class="border p-2">{{ ville.codePostal }}</td>
                         <td class="border p-2">
-                            <a href="{{ path('app_update_ville',{ 'id' : ville.id}) }}">Modifier</a>
-                            - <a href="{{ path('app_remove_ville',{'id' : ville.id}) }}">Supprimer</a>
+                            <a href="{{ path('app_update_ville',{ 'id' : ville.id}) }}" class="btn btn-outline btn-warning">Modifier</a>
+                            <a href="{{ path('app_remove_ville',{'id' : ville.id}) }}" class="btn btn-outline btn-error">Supprimer</a>
                         </td>
                     </tr>
                 {% endfor %}
                 </tbody>
             </table>
             <div class="mt-3">
-                <a href="{{ path('app_create_lieu') }}" class="btn">Ajouter</a>
+                <a href="{{ path('app_create_lieu') }}" class="btn btn-info hover:bg-blue-300">Ajouter</a>
             </div>
     </div>
 {% endblock %}
