--- a/templates/profile/detailsProfile.html.twig
+++ b/templates/profile/detailsProfile.html.twig
@@ -7,14 +7,14 @@
         {% if is_granted("ROLE_USER") %}
             <h1 class="text-center text-4xl mb-6">{{ participant.compte.pseudo }}</h1>
         {% endif %}
-        <div class="flex justify-center my-2 mx-auto md:px-2 pt-20 shadow-2xl rounded-lg">
+        <div class="flex justify-center my-2 md:px-2 pt-20 shadow-2xl rounded-lg p-10 w-2/3 mx-auto">
             <div class="flex">
                 <div class="detailsProfileImg">
                     {% if participant.urlPhoto %}
                     <div class="blockImg">
-                        <img src="{{ asset('uploads/' ~ participant.urlPhoto) }}" alt="Photo de profil">
+                        <img class="mask mask-squircle" src="{{ asset('uploads/' ~ participant.urlPhoto) }}" alt="Photo de profil">
                         {% else %}
-                            <img src="https://fakeimg.pl/350x200/?" alt="Fake photo">
+                            <img class="mask mask-squircle" src="https://fakeimg.pl/350x200/?" alt="Fake photo">
                     {% endif %}
                     </div>
                 </div>
@@ -42,9 +42,9 @@
                         </li>
                     </ul>
                     <div class="flex justify-center my-10">
-                        <a href="{{ path('app_home') }}" class="bg-red-600 hover:bg-red-800 text-white font-bold py-2 px-4 border border-blue-700 rounded ml-2">Retour</a>
+                        <a href="{{ path('app_home') }}" class="py-2 px-4 ml-4 btn btn-error hover:bg-red-300">Retour</a>
                         {% if app.user.id == participant.id or is_granted("ROLE_ADMIN") %}
-                            <a href="{{ path('manage_profile', {'id':participant.id}) }}" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 border border-blue-700 rounded ml-2">Modifier</a>
+                            <a href="{{ path('manage_profile', {'id':participant.id}) }}" class="py-2 px-4 ml-4 btn btn-info hover:bg-blue-300">Modifier</a>
                         {% endif %}
                     </div>
                 </div>
