--- a/templates/profile/manageProfile.html.twig
+++ b/templates/profile/manageProfile.html.twig
@@ -7,9 +7,9 @@
     <div class="profileForm flex justify-evenly w-1/5">
         <div class="shrink-0 grow-0 basis-auto md:w-2/12 lg:w-3/12">
             {% if participant.urlPhoto %}
-                <img src="{{ asset('uploads/' ~ participant.urlPhoto) }}" alt="Photo de profil">
+                <img class="mask mask-squircle" src="{{ asset('uploads/' ~ participant.urlPhoto) }}" alt="Photo de profil">
                 {% else %}
-                    <img src="https://fakeimg.pl/350x200/?" alt="Fake photo">
+                    <img class="mask mask-squircle" src="https://fakeimg.pl/350x200/?" alt="Fake photo">
             {% endif %}
         </div>
         <div class="profileFormTxt w-1/3">
@@ -55,8 +55,8 @@
                 {{ form_widget(profileForm.urlPhoto) }}
             </div>
             <div class="group mb-3 flex justify-center">
-                <button class="bg-green-600 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-full m-3">Enregistrer</button>
-                <a href="{{ path('app_home') }}" class="bg-red-600 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-full  m-3">Annuler</a>
+                <button class="py-2 px-4 ml-4 btn btn-success hover:bg-green-300">Enregistrer</button>
+                <a href="{{ path('app_home') }}" class="py-2 px-4 ml-4 btn btn-error hover:bg-red-300">Annuler</a>
             </div>
             {{ form_end(profileForm) }}
         </div>
