--- a/templates/site/manage.html.twig
+++ b/templates/site/manage.html.twig
@@ -7,7 +7,7 @@
     <div class="flex items-center mt-2">
         <p class="inset-y-0 flex items-center">Le nom contient : </p>
         {{ form_widget(filterForm.nom, {'attr': {'class': 'mb-3 input w-1/3 max-w-xs input-bordered ml-5'}}) }}
-        {{ form_widget(filterForm.search, {'attr': {'class': 'btn mx-3 mb-3'}}) }}
+        {{ form_widget(filterForm.search, {'attr': {'class': 'py-2 px-4 ml-4 btn btn-info hover:bg-blue-300'}}) }}
     </div>
     {{ form_end(filterForm) }}
     <div class="flex flex-col">
@@ -23,15 +23,15 @@
                 <tr>
                     <td class="border p-2">{{ site.nom }}</td>
                     <td class="border p-2">
-                          <a href="{{ path('app_update_site',{ 'id' : site.id}) }}">Modifier</a>
-                        - <a href="{{ path('app_delete_site',{'id' : site.id}) }}">Supprimer</a>
+                        <a href="{{ path('app_update_site',{ 'id' : site.id}) }}" class="btn btn-outline btn-warning">Modifier</a>
+                        <a href="{{ path('app_delete_site',{'id' : site.id}) }}" class="btn btn-outline btn-error">Supprimer</a>
                     </td>
                 </tr>
             {% endfor %}
             </tbody>
         </table>
         <div class="mt-3">
-            <a href="{{ path('app_create_site') }}" class="btn">Ajouter</a>
+            <a href="{{ path('app_create_site') }}" class="btn btn-success hover:bg-green-300">Ajouter</a>
         </div>
     </div>
 {% endblock %}
