--- a/templates/site/update.html.twig
+++ b/templates/site/update.html.twig
@@ -11,7 +11,7 @@
         </div>
     </div>
     <div class="flex justify-center mt-8">
-        <button type="submit" class="btn btn-success mx-3">Enregistrer</button>
+        <button type="submit" class="btn btn-success hover:bg-green-300">Enregistrer</button>
     </div>
     {{ form_end(siteForm) }}
 {% endblock %}
