--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -14,7 +14,7 @@
             </div>
         {% endif %}
 
-        <h1 class="sm:text-3xl text-2xl font-medium title-font mb-4 text-black text-center mt-8">Please sign in</h1>
+        <h1 class="sm:text-3xl text-2xl font-medium title-font mb-4 text-black text-center mt-8">Connectez-vous</h1>
         <label for="inputPseudoOrEmail" class="text-left">Pseudo ou Email</label>
         <input type="text" value="{{ last_username }}" name="pseudoOrEmail" id="inputPseudoOrEmail" class="input input-bordered w-full max-w-xs" autocomplete="email" required>
 
